<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.kajangdev.moviekita.presentation.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_movie"
        android:name="com.kajangdev.moviekita.presentation.movie.MovieFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_tv" />

    <fragment
        android:id="@+id/navigation_tv"
        android:name="com.kajangdev.moviekita.presentation.tv.TvShowFragment"
        android:label="@string/title_tv"
        tools:layout="@layout/fragment_tv" />
    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.kajangdev.moviekita.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark" />
</navigation>