<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:fillViewport="true"
    tools:context=".presentation.detail.DetailActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:id="@+id/ibBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_round_back"
            android:elevation="1dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/cd_image_button_back" />

        <ImageView
            android:id="@+id/ivBackdrop"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:background="@color/cyan"
            android:contentDescription="@string/cd_backdrop_detail"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivBackgroundMv"
            android:layout_width="match_parent"
            android:layout_height="24dp"
            android:layout_marginTop="196dp"
            android:background="@drawable/detail_bg"
            android:contentDescription="@string/cd_bg_detail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivPoster"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:src="@color/gray"
            app:layout_constraintBottom_toBottomOf="@+id/ivBackdrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:riv_corner_radius="10dp" />

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/fira_sans_medium"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:singleLine="true"
            android:text="@string/title"
            android:textColor="@color/white"
            android:textSize="26sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBackdrop" />

        <TextView
            android:id="@+id/tvReleaseMv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fira_sans"
            android:text="@string/release_date"
            android:textColor="@color/colorFont"
            app:layout_constraintEnd_toEndOf="@+id/tvTitle"
            app:layout_constraintStart_toStartOf="@+id/tvTitle"
            app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

        <ImageView
            android:id="@+id/ivStar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/cd_star"
            android:src="@drawable/ic_baseline_star_24"
            app:layout_constraintEnd_toEndOf="@+id/tvReleaseMv"
            app:layout_constraintStart_toStartOf="@+id/tvReleaseMv"
            app:layout_constraintTop_toBottomOf="@+id/tvReleaseMv" />

        <TextView
            android:id="@+id/tvRating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_int"
            android:textColor="#F5B402"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivStar"
            app:layout_constraintStart_toEndOf="@+id/ivStar"
            app:layout_constraintTop_toTopOf="@+id/ivStar" />

        <TextView
            android:id="@+id/tvCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/fira_sans"
            android:text="@string/vote_count"
            android:textColor="@color/colorFont"
            app:layout_constraintEnd_toEndOf="@+id/tvRating"
            app:layout_constraintStart_toStartOf="@+id/ivStar"
            app:layout_constraintTop_toBottomOf="@+id/tvRating" />

        <ImageButton
            android:id="@+id/icBookmark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:contentDescription="@string/cd_bookmark"
            android:src="@drawable/ic_baseline_bookmark_border_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tvRating"
            app:layout_constraintTop_toBottomOf="@+id/tvReleaseMv" />

        <ImageButton
            android:id="@+id/icShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@null"
            android:contentDescription="@string/cd_bookmark"
            android:src="@drawable/ic_baseline_share_24"
            app:layout_constraintEnd_toStartOf="@+id/ivStar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvReleaseMv" />

        <TextView
            android:id="@+id/tvLbOverview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/fira_sans"
            android:text="@string/label_overview"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCount" />


        <com.ms.square.android.expandabletextview.ExpandableTextView
            android:id="@+id/tvOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            app:animDuration="200"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLbOverview"
            app:maxCollapsedLines="3">

            <TextView
                android:id="@id/expandable_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorFont" />

            <ImageButton
                android:id="@id/expand_collapse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:background="@android:color/transparent"
                android:contentDescription="@string/cd_synopsis"
                android:paddingTop="10dp"
                android:paddingEnd="16dp"
                tools:ignore="RtlSymmetry" />
        </com.ms.square.android.expandabletextview.ExpandableTextView>

        <TextView
            android:id="@+id/tvLbDescriptionMv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:fontFamily="@font/fira_sans"
            android:text="@string/label_description"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOverview" />

        <TextView
            android:id="@+id/tvLbGenreMv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/fira_sans"
            android:text="@string/tv_lb_genre"
            android:textColor="@color/colorFont"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLbDescriptionMv" />

        <TextView
            android:id="@+id/tvGenreMv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/fira_sans"
            android:singleLine="true"
            android:textColor="@color/colorFont"
            app:layout_constraintBottom_toBottomOf="@+id/tvLbGenreMv"
            app:layout_constraintStart_toEndOf="@+id/tvLbGenreMv"
            app:layout_constraintTop_toTopOf="@+id/tvLbGenreMv" />

        <TextView
            android:id="@+id/tvLbLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/fira_sans"
            android:text="@string/tv_lb_language"
            android:textColor="@color/colorFont"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLbGenreMv" />

        <TextView
            android:id="@+id/tvLanguage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/fira_sans"
            android:singleLine="true"
            android:textColor="@color/colorFont"
            app:layout_constraintBottom_toBottomOf="@+id/tvLbLanguage"
            app:layout_constraintStart_toEndOf="@+id/tvLbLanguage"
            app:layout_constraintTop_toTopOf="@+id/tvLbLanguage" />


        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/ldDetailMv"
            style="@style/SpinKitView.Large.CubeGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:SpinKit_Color="#E91E63"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>